figuring out marker sizing and tile layers

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'type': 'FeatureCollection',\n",
-       " 'metadata': {'generated': 1602114560000,\n",
+       " 'metadata': {'generated': 1602114740000,\n",
        "  'url': 'https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.geojson',\n",
        "  'title': 'USGS All Earthquakes, Past Week',\n",
        "  'status': 200,\n",
        "  'api': '1.10.3',\n",
-       "  'count': 3377},\n",
+       "  'count': 3373},\n",
        " 'features': [{'type': 'Feature',\n",
        "   'properties': {'mag': 1.3,\n",
        "    'place': '135 km NW of Yakutat, Alaska',\n",
@@ -4612,9 +4612,9 @@
        "   'geometry': {'type': 'Point', 'coordinates': [-102.1261, 32.1048, 5]},\n",
        "   'id': 'us6000c6el'},\n",
        "  {'type': 'Feature',\n",
-       "   'properties': {'mag': 1.1,\n",
-       "    'place': '19 km E of Goldfield, Nevada',\n",
-       "    'time': 1602073275699,\n",
+       "   'properties': {'mag': 1.3,\n",
+       "    'place': 'California-Nevada border region',\n",
+       "    'time': 1602073275653,\n",
        "    'updated': 1602114556721,\n",
        "    'tz': None,\n",
        "    'url': 'https://earthquake.usgs.gov/earthquakes/eventpage/nn00777606',\n",
@@ -4625,20 +4625,20 @@
        "    'alert': None,\n",
        "    'status': 'reviewed',\n",
        "    'tsunami': 0,\n",
-       "    'sig': 19,\n",
+       "    'sig': 26,\n",
        "    'net': 'nn',\n",
        "    'code': '00777606',\n",
        "    'ids': ',nn00777606,',\n",
        "    'sources': ',nn,',\n",
        "    'types': ',origin,phase-data,',\n",
-       "    'nst': 10,\n",
+       "    'nst': 17,\n",
        "    'dmin': 0.425,\n",
-       "    'rms': 0.2174,\n",
-       "    'gap': 146.19,\n",
+       "    'rms': 0.1855,\n",
+       "    'gap': 145.31,\n",
        "    'magType': 'ml',\n",
        "    'type': 'earthquake',\n",
-       "    'title': 'M 1.1 - 19 km E of Goldfield, Nevada'},\n",
-       "   'geometry': {'type': 'Point', 'coordinates': [-117.0162, 37.6825, 0]},\n",
+       "    'title': 'M 1.3 - California-Nevada border region'},\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [-117.0202, 37.6797, 13.4]},\n",
        "   'id': 'nn00777606'},\n",
        "  {'type': 'Feature',\n",
        "   'properties': {'mag': 2.57,\n",
@@ -29436,7 +29436,7 @@
        " 'bbox': [-179.268, -62.3735, -3.5, 178.9776, 69.4466, 628.77]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29444,7 +29444,8 @@
    "source": [
     "url = \"https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_week.geojson\"\n",
     "response = requests.get(url)\n",
-    "response.json()"
+    "r_json = response.json()\n",
+    "r_json"
    ]
   },
   {
